feat: integrate turbo command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "change": "modern change",
     "bump": "modern bump",
     "pre": "modern pre",
-    "prepare": "husky install",
+    "prepare": "npm run build && husky install",
+    "dev": "turbo run dev --filter {packages/**} --cache-dir=.turbo --no-daemon",
+    "build": "turbo run build --filter {packages/**} --cache-dir=.turbo --no-daemon",
     "change-status": "modern change-status",
     "gen-release-note": "modern gen-release-note",
     "release": "modern release",
