--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -3,6 +3,7 @@
   "declaration": true,
   "compilerOptions": {
     "module": "ESNext",
+    "target": "ESNext",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
