--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -57,6 +57,10 @@ jobs:
         if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
         run: pnpm install --ignore-scripts
 
-      - name: Test
+      - name: Unit Test
         if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
         run: pnpm run test:unit
+
+      - name: E2E Test
+        if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
+        run: pnpm run test:e2e
