--- a/.github/workflows/test-macOS.yml
+++ b/.github/workflows/test-macOS.yml
@@ -52,9 +52,13 @@ jobs:
         if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
         run: pnpm install --ignore-scripts
 
-      - name: Test
+      - name: Unit Test
         if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
         run: pnpm run test:unit
+
+      - name: E2E Test
+        if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
+        run: pnpm run test:e2e
 
       - name: Collect coverage
         if: ${{steps.docs-change.outputs.DOCS_CHANGE != 'docs only change'}}
