--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "npm run build && husky install",
     "dev": "turbo run dev --filter {packages/**} --cache-dir=.turbo --no-daemon",
     "build": "turbo run build --filter {packages/**} --cache-dir=.turbo --no-daemon",
-    "test:unit": "vitest run",
+    "test:unit": "turbo run test --filter {packages/**} --cache-dir=.turbo --no-daemon",
     "test:e2e": "playwright test",
     "change-status": "modern change-status",
     "gen-release-note": "modern gen-release-note",
