--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,18 +12,24 @@
     "dev": "modern dev",
     "build": "modern build",
     "build:watch": "modern build -w",
+    "test": "vitest run",
     "reset": "rimraf ./**/node_modules",
     "new": "modern new",
     "upgrade": "modern upgrade"
   },
   "dependencies": {
-    "cac": "^6.7.14"
+    "cac": "^6.7.14",
+    "interpret": "^3.1.1",
+    "rechoir": "^0.8.0"
   },
   "devDependencies": {
+    "@types/interpret": "^1.1.1",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
+    "@types/rechoir": "^0.6.1",
     "rimraf": "~3.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "~5.0.4"
   },
   "sideEffects": [],
