chore: set cli package name

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rspress",
+  "name": "@rspress/cli",
   "version": "0.1.0",
   "type": "module",
   "types": "./dist/types/index.d.ts",
