fix: add files in package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,5 +36,9 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "files": [
+    "bin",
+    "dist"
+  ]
 }
