--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -1,4 +1,4 @@
-name: Test (vitest - Windows)
+name: Test (vitest & playwright - Windows)
 
 concurrency:
   group: windows-test-${{ github.head_ref }}
