--- a/e2e/example/package.json
+++ b/e2e/example/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
-    "typescript": "~5.0.4"
+    "typescript": "~5.0.4",
+    "ts-node": "10.9.1"
   }
 }
