--- a/e2e/example/package.json
+++ b/e2e/example/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "rspress-basic-exmaple",
   "scripts": {
     "dev": "rspress dev",
@@ -6,7 +7,7 @@
     "preview": "rspress preview"
   },
   "dependencies": {
-    "@rspress/cli": "workspace:*"
+    "rspress": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
