--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -10,6 +10,12 @@
     },
     "isolatedModules": true
   },
-  "include": ["src", "vitest.config.ts", "modern.config.ts"],
+  "include": [
+    "src",
+    "vitest.config.ts",
+    "modern.config.ts",
+    "runtime.ts",
+    "theme.ts"
+  ],
   "exclude": ["**/node_modules"]
 }
