--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,6 +35,7 @@
   "sideEffects": [],
   "publishConfig": {
     "access": "public",
+    "provenance": true,
     "registry": "https://registry.npmjs.org/"
   },
   "files": [
