--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ on:
   issue_comment:
     types: [created]
 
+permissions:
+  id-token: write
+
 jobs:
   issue_commentd:
     name: Release with commentd
