--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,6 +5,11 @@
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web-infra-dev/rspress",
+    "directory": "packages/shared"
+  },
   "scripts": {
     "dev": "modern build -w",
     "build": "modern build",
