--- a/packages/plugin-auto-sidebar/package.json
+++ b/packages/plugin-auto-sidebar/package.json
@@ -13,7 +13,7 @@
   "jsnext:source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
-  "module": "./dist/node/index.js",
+  "module": "./dist/index.js",
   "scripts": {
     "dev": "modern dev",
     "build": "modern build",
