--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -51,7 +51,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.8.1",
-    "rspack-plugin-virtual-module": "^0.1.4",
+    "rspack-plugin-virtual-module": "0.1.8",
     "typescript": "^5",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1"
