--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "@rspress/plugin-auto-sidebar",
+  "name": "@rspress/plugin-preview",
   "version": "0.1.0",
-  "description": "A plugin for rspress to generate navbar and sidebar config automatically.",
+  "description": "A plugin for rspress to preview the code block in markdown/mdx file.",
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/web-infra-dev/rspress",
-    "directory": "packages/plugin-auto-sidebar"
+    "directory": "packages/plugin-preview"
   },
   "license": "MIT",
-  "type": "module",
   "jsnext:source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
-  "module": "./dist/index.js",
   "scripts": {
-    "dev": "modern dev",
+    "dev": "modern build -w",
     "build": "modern build",
     "reset": "rimraf ./**/node_modules",
     "lint": "modern lint",
@@ -36,35 +34,41 @@
     "node_modules/",
     "dist/"
   ],
+  "dependencies": {
+    "@mdx-js/mdx": "2.2.1",
+    "@rspress/shared": "workspace:*",
+    "@modern-js/utils": "2.30.0",
+    "qrcode.react": "^3.1.0",
+    "remark-gfm": "3.0.1"
+  },
   "devDependencies": {
-    "@modern-js/tsconfig": "2.30.0",
+    "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "mdast-util-mdxjs-esm": "^1.3.0",
+    "prettier": "^2.6.2",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6.8.1",
+    "rspack-plugin-virtual-module": "0.1.8",
     "typescript": "^5",
-    "vitest": "0.33.0",
-    "react": "^18.2.0",
-    "@rspress/shared": "workspace:*"
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1"
   },
   "peerDependencies": {
-    "rspress": "*"
+    "react": ">=17",
+    "react-router-dom": "^6.8.1",
+    "@rspress/core": "*"
   },
-  "sideEffects": [
-    "*.css",
-    "*.less",
-    "*.sass",
-    "*.scss"
-  ],
   "files": [
     "dist",
-    "src"
+    "static",
+    "mdx-meta-loader.cjs"
   ],
   "publishConfig": {
     "access": "public",
     "provenance": true,
     "registry": "https://registry.npmjs.org/"
-  },
-  "dependencies": {
-    "@modern-js/utils": "2.30.0"
   }
 }
