chore: fix windows shell

--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -41,6 +41,7 @@ jobs:
         run: corepack enable
 
       - name: Check skip CI
+        shell: bash
         run: echo "RESULT=$(node ./scripts/skipCI.js)" >> "$GITHUB_OUTPUT"
         id: skip-ci
 
