--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "npm run build && husky install",
     "dev": "turbo run dev --filter {packages/**} --cache-dir=.turbo --no-daemon",
     "build": "turbo run build --filter {packages/**} --cache-dir=.turbo --no-daemon",
+    "test": "pnpm test:unit && pnpm test:e2e",
     "test:unit": "turbo run test --filter {packages/**} --cache-dir=.turbo --no-daemon",
     "test:e2e": "playwright test",
     "change-status": "modern change-status",
@@ -50,10 +51,15 @@
     "@modern-js/monorepo-tools": "2.30.0",
     "@modern-js/tsconfig": "2.30.0",
     "@playwright/test": "1.33.0",
+    "@types/cross-spawn": "^6.0.2",
+    "cross-spawn": "^7.0.3",
+    "execa": "8.0.1",
+    "get-port": "5.0.0",
     "husky": "^8.0.0",
     "lint-staged": "~13.1.0",
     "playwright": "1.33.0",
     "prettier": "^2.6.2",
+    "tree-kill": "^1.2.2",
     "turbo": "^1.10.12",
     "vitest": "^0.34.1"
   },
