--- a/e2e/fixtures/with-base/package.json
+++ b/e2e/fixtures/with-base/package.json
@@ -8,6 +8,7 @@
     "preview": "rspress preview"
   },
   "devDependencies": {
+    "rspress": "workspace:*",
     "@modern-js/tsconfig": "2.30.0",
     "@types/jest": "^29",
     "@types/node": "^14"
