feat: upload playwright report

--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -80,3 +80,11 @@ jobs:
       - name: E2E Test
         if: ${{steps.skip-ci.outputs.RESULT != 'true'}}
         run: npx playwright install --with-deps && pnpm run test:e2e
+
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
