feat: add create-rspress

--- a/packages/create-rspress/template/package.json
+++ b/packages/create-rspress/template/package.json
@@ -8,7 +8,7 @@
     "preview": "rspress preview"
   },
   "dependencies": {
-    "rspress": "workspace:*"
+    "rspress": "latest"
   },
   "devDependencies": {
     "@modern-js/tsconfig": "2.30.0",
