--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "website",
-  "version": "1.0.0",
+  "name": "@rspress/docs",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,13 @@
     "rspress": "workspace:*",
     "ts-node": "^10.9.1",
     "typescript": "^5"
-  }
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true,
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "docs"
+  ]
 }
