fix: document script

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "deploy": "modern deploy",
     "lint": "modern lint",
     "upgrade": "modern upgrade",
-    "dev:website": "turbo run dev --filter {apps/website} --cache-dir=.turbo --no-daemon",
-    "build:website": "turbo run build --filter {apps/website} --cache-dir=.turbo --no-daemon",
-    "preview:website": "cd apps/website && npm run preview"
+    "dev:website": "turbo run dev --filter {packages/document} --cache-dir=.turbo --no-daemon",
+    "build:website": "turbo run build --filter {packages/document} --cache-dir=.turbo --no-daemon",
+    "preview:website": "cd packages/document && npm run preview"
   },
   "engines": {
     "node": ">=16.18.1"
