--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -8,6 +8,11 @@
     "build": "rspress build",
     "start": "rspress start"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/web-infra-dev/rspress",
+    "directory": "packages/document"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT",
