--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,7 +41,8 @@
     "@rspress/core": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
-    "chalk": "5.3.0"
+    "chalk": "5.3.0",
+    "gradient-string": "2.0.2"
   },
   "devDependencies": {
     "@types/jest": "~29.2.4",
@@ -49,7 +50,8 @@
     "@types/react": "~18.0.26",
     "rimraf": "~3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4"
+    "typescript": "~5.0.4",
+    "@types/gradient-string": "1.1.2"
   },
   "sideEffects": [],
   "publishConfig": {
