--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "prettier": "^2.6.2",
     "tree-kill": "^1.2.2",
     "turbo": "^1.10.12",
-    "vitest": "^0.34.1"
+    "vitest": "0.34.1"
   },
   "publishConfig": {
     "access": "public",
