--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "engines": {
     "node": ">=16.18.1"
   },
+  "packageManager": "pnpm@8.6.1",
   "lint-staged": {
     "*.{ts,tsx}": [
       "node --max_old_space_size=8192 ./node_modules/eslint/bin/eslint.js --fix --color --cache --quiet"
