feat: add update:modern script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,9 @@
     "isolatedModules": true,
     "paths": {}
   },
-  "include": ["vitest.config.ts", "playwright.config.ts"]
+  "include": [
+    "vitest.config.ts",
+    "playwright.config.ts",
+    "./scripts/update-modern.ts"
+  ]
 }
