--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "upgrade": "modern upgrade",
     "dev:website": "turbo run dev --filter {packages/document} --cache-dir=.turbo --no-daemon",
     "build:website": "turbo run build --filter {packages/document} --cache-dir=.turbo --no-daemon",
-    "preview:website": "cd packages/document && npm run preview"
+    "preview:website": "cd packages/document && npm run preview",
+    "update:modern": "ts-node ./scripts/update-modern.ts"
   },
   "engines": {
     "node": ">=16.18.1"
@@ -49,21 +50,26 @@
     ]
   },
   "devDependencies": {
+    "@manypkg/get-packages": "^2.2.0",
     "@modern-js-app/eslint-config": "2.30.0",
     "@modern-js/eslint-config": "2.30.0",
+    "@modern-js/generator-utils": "^3.1.37",
     "@modern-js/module-tools": "2.30.0",
     "@modern-js/monorepo-tools": "2.30.0",
     "@modern-js/tsconfig": "2.30.0",
     "@playwright/test": "1.33.0",
     "@types/cross-spawn": "^6.0.2",
+    "@types/fs-extra": "^11.0.1",
     "cross-spawn": "^7.0.3",
     "execa": "8.0.1",
+    "fs-extra": "^11.1.1",
     "get-port": "5.0.0",
     "husky": "^8.0.0",
     "lint-staged": "~13.1.0",
     "playwright": "1.33.0",
     "prettier": "^2.6.2",
     "tree-kill": "^1.2.2",
+    "ts-node": "^10.9.1",
     "turbo": "^1.10.12",
     "vitest": "0.34.1"
   },
