--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,14 +57,14 @@
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
-    "@modern-js/builder": "2.30.0",
-    "@modern-js/builder-rspack-provider": "2.30.0",
+    "@modern-js/builder": "0.0.0-next-1693281968009",
+    "@modern-js/builder-rspack-provider": "0.0.0-next-1693281968009",
     "@rspress/plugin-medium-zoom": "workspace:*",
     "@rspress/plugin-last-updated": "workspace:*",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
     "@modern-js/mdx-rs-binding": "0.2.5",
     "@rspress/remark-container": "workspace:*",
-    "@modern-js/utils": "2.30.0",
+    "@modern-js/utils": "0.0.0-next-1693281968009",
     "@types/compression": "^1.7.2",
     "@types/polka": "^0.5.4",
     "acorn": "^8.8.1",
@@ -116,10 +116,10 @@
     "react": ">=17"
   },
   "devDependencies": {
-    "@modern-js/plugin-tailwindcss": "2.30.0",
-    "@modern-js/plugin-testing": "2.30.0",
-    "@modern-js/tsconfig": "2.30.0",
-    "@modern-js/types": "2.30.0",
+    "@modern-js/plugin-tailwindcss": "0.0.0-next-1693281968009",
+    "@modern-js/plugin-testing": "0.0.0-next-1693281968009",
+    "@modern-js/tsconfig": "0.0.0-next-1693281968009",
+    "@modern-js/types": "0.0.0-next-1693281968009",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/fs-extra": "^9.0.13",
     "@types/hast": "^2.3.4",
