--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@mdx-js/mdx": "2.2.1",
     "@rspress/shared": "workspace:*",
-    "@modern-js/utils": "2.30.0",
+    "@modern-js/utils": "0.0.0-next-1693281968009",
     "qrcode.react": "^3.1.0",
     "remark-gfm": "3.0.1"
   },
