--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -36,7 +36,7 @@
     "dist/"
   ],
   "devDependencies": {
-    "@modern-js/tsconfig": "2.30.0",
+    "@modern-js/tsconfig": "0.0.0-next-1693281968009",
     "@types/node": "^18.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -64,7 +64,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@modern-js/utils": "2.30.0",
+    "@modern-js/utils": "0.0.0-next-1693281968009",
     "typedoc": "0.24.8",
     "typedoc-plugin-markdown": "3.15.3"
   }
