--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,8 +19,8 @@
     "upgrade": "modern upgrade"
   },
   "dependencies": {
-    "@modern-js/builder": "2.30.0",
-    "@modern-js/builder-rspack-provider": "2.30.0",
+    "@modern-js/builder": "0.0.0-next-1693281968009",
+    "@modern-js/builder-rspack-provider": "0.0.0-next-1693281968009",
     "unified": "10.1.2"
   },
   "devDependencies": {
