--- a/.github/workflows/release-pull-request-with-modernjs.yml
+++ b/.github/workflows/release-pull-request-with-modernjs.yml
@@ -58,6 +58,7 @@ jobs:
           versionNumber: 'auto'
           type: 'pull request'
           tools: 'modern'
+          beforeBumpScript: 'update:modern'
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_SCOPED_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
