fix: resolve error in pure js project

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,8 +13,7 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./*"],
-      "@style/*": ["./styles/*"],
-      "@theme": ["./theme-default/index.ts"]
+      "@theme": ["./theme-default"]
     }
   },
   "include": [
