--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "jsx": "preserve",
     "paths": {
-      "i18n": ["./i18n.json"]
+      "i18n": ["./i18n.json"],
+      "@/assets/*": ["./docs/public/*"],
+      "@/components/*": ["./components/*"]
     }
   },
-  "include": ["./rspress.config.ts", "docs/**/*", "src/**/*"]
+  "include": ["./rspress.config.ts", "docs/**/*", "src/**/*", "components/**/*"]
 }
