--- a/packages/plugin-auto-nav-sidebar/package.json
+++ b/packages/plugin-auto-nav-sidebar/package.json
@@ -43,8 +43,7 @@
     "@types/react-dom": "^18",
     "typescript": "^5",
     "vitest": "0.33.0",
-    "react": "^18.2.0",
-    "@rspress/shared": "workspace:*"
+    "react": "^18.2.0"
   },
   "peerDependencies": {
     "rspress": "*"
@@ -65,6 +64,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@modern-js/utils": "2.33.0"
+    "@modern-js/utils": "2.33.0",
+    "@rspress/shared": "workspace:*"
   }
 }
