chore: optimize sidebar style

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,7 +13,8 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./*"],
-      "@theme": ["./theme-default"]
+      "@theme": ["./theme-default"],
+      "@/theme-default/*": ["./theme-default/*"]
     }
   },
   "include": [
