--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,6 +5,9 @@
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
+  "fixed": [
+    ["@rspress/*", "rspress", "create-rspress", "@modern-js/plugin-rspress"]
+  ],
   "updateInternalDependencies": "patch",
   "ignore": []
 }
