--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,3 +121,12 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           REPOSITORY: ${{ github.repository }}
           REF: ${{ github.ref }}
+
+      - name: Trigger Modern Update Rspress
+        if: ${{github.event.inputs.version == 'latest'}}
+        run: |
+          curl -X POST \
+          -H 'Content-Type: application/json' \
+          -H 'Authorization: Bearer ${{ secrets.REPO_SCOPED_TOKEN }}' \
+          -d '{"ref": "main"}' \
+          https://api.github.com/repos/caohuilin/modern.js/actions/workflows/update-rspress.yml/dispatches
