--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -5,7 +5,9 @@
     "paths": {
       "i18n": ["./i18n.json"],
       "@/assets/*": ["./docs/public/*"],
-      "@/components/*": ["./components/*"]
+      "@/components/*": ["./components/*"],
+      "@zh/*": ["./docs/zh/*"],
+      "@en/*": ["./docs/en/*"]
     }
   },
   "include": ["./rspress.config.ts", "docs/**/*", "src/**/*", "components/**/*"]
