fix: remove @headlessui/react dep

--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "rspress": "workspace:*",
     "ts-node": "^10.9.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/react": "18.2.0"
   },
   "publishConfig": {
     "access": "public",
