--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -7,7 +7,8 @@
       "@/assets/*": ["./docs/public/*"],
       "@/components/*": ["./components/*"],
       "@zh/*": ["./docs/zh/*"],
-      "@en/*": ["./docs/en/*"]
+      "@en/*": ["./docs/en/*"],
+      "@theme": ["../core/theme"]
     }
   },
   "include": ["./rspress.config.ts", "docs/**/*", "src/**/*", "components/**/*"]
