--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -7,8 +7,7 @@
       "@/assets/*": ["./docs/public/*"],
       "@/components/*": ["./components/*"],
       "@zh/*": ["./docs/zh/*"],
-      "@en/*": ["./docs/en/*"],
-      "@theme": ["../core/theme"]
+      "@en/*": ["./docs/en/*"]
     }
   },
   "include": ["./rspress.config.ts", "docs/**/*", "src/**/*", "components/**/*"]
