--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -47,18 +47,15 @@
     "dist/"
   ],
   "dependencies": {
-    "@babel/core": "~7.21.8",
-    "@babel/parser": "~7.21.9",
-    "@babel/plugin-syntax-jsx": "~7.21.4",
-    "@babel/plugin-syntax-typescript": "~7.21.4",
-    "@babel/plugin-transform-react-jsx": "~7.21.5",
-    "@babel/plugin-transform-typescript": "~7.21.3",
+    "@babel/parser": "^7.22.16",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/plugin-syntax-typescript": "^7.22.5",
     "@babel/standalone": "^7.22.17",
-    "@babel/traverse": "~7.21.5",
+    "@babel/traverse": "^7.22.17",
     "@mdx-js/mdx": "2.2.1",
     "@modern-js/utils": "2.34.0",
     "@rspress/shared": "workspace:*",
-    "qrcode.react": "^3.1.0",
+    "@monaco-editor/react": "~4.4.6",
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
