fix: changeset fixed config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,10 @@
   "fixed": [
     ["@rspress/*", "rspress", "create-rspress", "@modern-js/plugin-rspress"]
   ],
+  "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
+    "onlyUpdatePeerDependentsWhenOutOfRange": true,
+    "updateInternalDependents": "always"
+  },
   "updateInternalDependencies": "patch",
   "ignore": []
 }
