--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -10,5 +10,11 @@
       "@en/*": ["./docs/en/*"]
     }
   },
-  "include": ["./rspress.config.ts", "docs/**/*", "src/**/*", "components/**/*"]
+  "include": [
+    "./rspress.config.ts",
+    "docs/**/*",
+    "src/**/*",
+    "components/**/*",
+    "theme/**/*"
+  ]
 }
