feat: support multi version

--- a/e2e/fixtures/multi-version/package.json
+++ b/e2e/fixtures/multi-version/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rspress-doc-template",
+  "name": "rspress-multi-version-docs",
   "version": "1.0.0",
   "private": true,
   "scripts": {
