chore(core): modify builder config to adapt rspack-provider builtin:swc-loader

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,8 +56,8 @@
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
-    "@modern-js/builder": "2.35.1",
-    "@modern-js/builder-rspack-provider": "2.35.1",
+    "@modern-js/builder": "0.0.0-next-20230925115155",
+    "@modern-js/builder-rspack-provider": "0.0.0-next-20230925115155",
     "@rspress/plugin-medium-zoom": "workspace:*",
     "@rspress/plugin-last-updated": "workspace:*",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
