chore: add predefined question

--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -23,7 +23,7 @@
     "typescript": "^5",
     "@types/react": "18.2.0",
     "@documate/documate": "^0.1.0",
-    "@documate/react": "^0.1.0"
+    "@documate/react": "0.2.1"
   },
   "publishConfig": {
     "access": "public",
