--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -39,7 +39,8 @@
     "@rspress/shared": "workspace:*",
     "@modern-js/utils": "2.35.1",
     "qrcode.react": "^3.1.0",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "rspack-plugin-virtual-module": "0.1.12"
   },
   "devDependencies": {
     "@types/mdast": "^3.0.10",
@@ -51,7 +52,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.8.1",
-    "rspack-plugin-virtual-module": "0.1.11",
     "typescript": "^5",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1"
