--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -40,7 +40,8 @@
     "@modern-js/utils": "2.35.1",
     "qrcode.react": "^3.1.0",
     "remark-gfm": "3.0.1",
-    "rspack-plugin-virtual-module": "0.1.12"
+    "rspack-plugin-virtual-module": "0.1.12",
+    "codesandbox": "2.2.3"
   },
   "devDependencies": {
     "@types/mdast": "^3.0.10",
