--- a/e2e/fixtures/modern-js/tsconfig.json
+++ b/e2e/fixtures/modern-js/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "demo": ["."]
+      "demo": ["./src"]
     }
   },
   "include": ["src"]
