feat: move global components to runtime

--- a/packages/core/src/runtime/tsconfig.json
+++ b/packages/core/src/runtime/tsconfig.json
@@ -3,7 +3,8 @@
     "rootDir": ".",
     "baseUrl": ".",
     "skipLibCheck": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "esModuleInterop": true
   },
   "include": ["./**/*"]
 }
