--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -59,7 +59,7 @@
   "peerDependencies": {
     "react": ">=17",
     "react-router-dom": "^6.8.1",
-    "@rspress/core": "1.0.2"
+    "@rspress/core": "^1.0.2"
   },
   "files": [
     "dist",
