--- a/packages/plugin-auto-nav-sidebar/package.json
+++ b/packages/plugin-auto-nav-sidebar/package.json
@@ -46,7 +46,7 @@
     "react": "^18.2.0"
   },
   "peerDependencies": {
-    "rspress": "1.0.2"
+    "rspress": "^1.0.2"
   },
   "sideEffects": [
     "*.css",
