--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -37,7 +37,7 @@
     "dist/"
   ],
   "peerDependencies": {
-    "rspress": "1.0.2"
+    "rspress": "^1.0.2"
   },
   "sideEffects": [
     "*.css",
