--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -47,7 +47,7 @@
     "@rspress/shared": "workspace:*"
   },
   "peerDependencies": {
-    "rspress": "1.0.2"
+    "rspress": "^1.0.2"
   },
   "sideEffects": [
     "*.css",
