--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -74,7 +74,7 @@
     "unist-util-visit": "^4.1.1"
   },
   "peerDependencies": {
-    "@rspress/core": "1.0.2",
+    "@rspress/core": "^1.0.2",
     "react": ">=17",
     "react-router-dom": "^6.8.1"
   },
