--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -46,7 +46,7 @@
     "@rspress/shared": "workspace:*"
   },
   "peerDependencies": {
-    "rspress": "1.0.2"
+    "rspress": "^1.0.2"
   },
   "sideEffects": [
     "*.css",
